# successive

./: .gitignore  LICENSE  README.md  successive.cabal
src/Data/: Successive.hs
