name:                successive
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wygulmage/successive#readme
license:             BSD3
license-file:        LICENSE
author:              Keith Wygant
maintainer:          wygulmage@users.noreply.github.com
copyright:           2021 Keith Wygant
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Successive
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wygulmage/successive
